--- a/hack/install-latest.yaml
+++ b/hack/install-latest.yaml
@@ -150,6 +150,9 @@ spec:
                 - status
                 type: object
               type: array
+            observedGeneration:
+              format: int64
+              type: integer
             region:
               type: string
             zone:
