Add unit target code in the Makefile.ci

--- a/openshift/Makefile.ci
+++ b/openshift/Makefile.ci
@@ -1,7 +1,18 @@
 # Makefile.ci holds make directives called by the CI jobs for this repo.
+TARGET = kubefed
+GOTARGET = sigs.k8s.io/$(TARGET)
+TESTARGS ?= $(VERBOSE_FLAG) -timeout 60s
+TEST_PKGS ?= $(GOTARGET)/cmd/... $(GOTARGET)/pkg/...
+TEST_CMD = go test $(TESTARGS)
+TEST = $(TEST_CMD) $(TEST_PKGS)
+
+ifndef GOPATH
+	$(error GOPATH not defined, please define GOPATH. Run "go help gopath" to learn more about GOPATH)
+endif
 
 unit:
-	echo "ok"
+		echo "GOPATH is :"$(GOPATH)
+	$(TEST)
 
 vet:
 	echo "ok"
