--- a/openshift/Makefile.ci
+++ b/openshift/Makefile.ci
@@ -1,6 +1,6 @@
 # Makefile.ci holds make directives called by the CI jobs for this repo.
 TARGET = kubefed
-GOTARGET = $(GOPATH)/src/sigs.k8s.io/$(TARGET)
+GOTARGET = sigs.k8s.io/$(TARGET)
 TESTARGS ?= $(VERBOSE_FLAG) -timeout 60s
 TEST_PKGS ?= $(GOTARGET)/cmd/... $(GOTARGET)/pkg/...
 TEST_CMD = go test $(TESTARGS)
@@ -11,6 +11,7 @@ ifndef GOPATH
 endif
 
 unit:
+		echo "GOPATH is :"$(GOPATH)
 	$(TEST)
 
 vet:
