Setting GOPATH for building kuebfedctl RPM

--- a/openshift/Makefile.ci
+++ b/openshift/Makefile.ci
@@ -28,7 +28,7 @@ LDFLAG_OPTIONS = -ldflags "-X sigs.k8s.io/kubefed/pkg/version.version=$(GIT_VERS
 	-X sigs.k8s.io/kubefed/pkg/version.gitTreeState=$(GIT_TREESTATE) \
 	-X sigs.k8s.io/kubefed/pkg/version.buildDate=$(BUILDDATE)"
 
-GO_BUILDCMD = GO111MODULE=off CGO_ENABLED=0 go build $(VERBOSE_FLAG) $(LDFLAG_OPTIONS)
+GO_BUILDCMD = CGO_ENABLED=0 go build $(VERBOSE_FLAG) $(LDFLAG_OPTIONS)
 
 .PHONY: unit vet managed-e2e kubefedctl
 
